test_src/compiler_errors/types/arithmetic/DivideBoolError2.b
class DivideBoolError2 {
    void test() {
        println(2 / true);
    }
}
